Fix jzoom overflow for thumbnail images in projects.html

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,9 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="rhyme-scheme.html">
-              <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io">
+              <div class="thumbnail-image-container">
+                <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io">
+              </div>
               <div class="caption">
                 <h3 class="caption-title">Lane Claim</h3>
                 <p class="subcaption">A progressive web app for tracking and reporting bikelane obstructions</p>
@@ -42,7 +44,9 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="rail-mapper.html">
-              <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io">
+              <div class="thumbnail-image-container">
+                <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io">
+              </div>
               <div class="caption">
                 <h3 class="caption-title">Rail Mapper</h3>
                 <p class="subcaption">Using Networkx to map and create railway lines</p>
@@ -53,7 +57,9 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="rhyme-scheme.html">
-              <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io">
+              <div class="thumbnail-image-container">
+                <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io">
+              </div>
               <div class="caption">
                 <h3 class="caption-title">Lyric Analysis</h3>
                 <p class="subcaption">A Jupyter Notebook for analyzing stylistic habits of songwriters</p>
@@ -64,7 +70,9 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="ripta-dash.html">
-              <img src="pictures/ripta-dashboard.png" alt="RIPTA Dashboard">
+              <div class="thumbnail-image-container">
+                <img src="pictures/ripta-dashboard.png" alt="RIPTA Dashboard">
+              </div>
               <div class="caption">
                 <h3 class="caption-title">RIPTA Dashboard</h3>
                 <p class="subcaption">Real-time location and data of Providence buses</p>
@@ -75,7 +83,9 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="osmnx-grids.html">
-              <img src="pictures/osmnx_nyc_crop.png" alt="osmnx-grids of New York City by compass bearing">
+              <div class="thumbnail-image-container">
+                <img src="pictures/osmnx_nyc_crop.png" alt="osmnx-grids of New York City by compass bearing">
+              </div>
               <div class="caption">
                 <h3 class="caption-title">OSMnx Grid Analysis</h3>
                 <p class="subcaption">Using OSMnx to analyze the grids of New York City</p>
@@ -86,7 +96,9 @@
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="gb-github-pages.html">
-              <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io">
+              <div class="thumbnail-image-container">
+                <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io">
+              </div>
               <div class="caption">
                 <h3 class="caption-title">This Site</h3>
                 <p class="subcaption">A custom website built from scratch</p>
