Reorder projects chronologically

--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,8 @@
     </nav>
     <div class="container-fluid col-md-12" id="project-gallery" style="padding-left:0">
       <div class="row">
-        <div class="col-md-4">
+
+        <!-- <div class="col-md-4">
           <div class="thumbnail">
             <a href="rhyme-scheme.html">
               <div class="thumbnail-image-container">
@@ -40,8 +41,9 @@
               </div>
             </a>
           </div>
-        </div>
-        <div class="col-md-4">
+        </div> -->
+
+        <!-- <div class="col-md-4">
           <div class="thumbnail">
             <a href="rail-mapper.html">
               <div class="thumbnail-image-container">
@@ -53,7 +55,7 @@
               </div>
             </a>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="rhyme-scheme.html">
@@ -67,19 +69,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <a href="ripta-dash.html">
-              <div class="thumbnail-image-container">
-                <img src="pictures/ripta-dashboard.png" alt="RIPTA Dashboard">
-              </div>
-              <div class="caption">
-                <h3 class="caption-title">RIPTA Dashboard</h3>
-                <p class="subcaption">Real-time location and data of Providence buses</p>
-              </div>
-            </a>
-          </div>
-        </div>
+
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="osmnx-grids.html">
@@ -93,6 +83,21 @@
             </a>
           </div>
         </div>
+
+        <div class="col-md-4">
+          <div class="thumbnail">
+            <a href="ripta-dash.html">
+              <div class="thumbnail-image-container">
+                <img src="pictures/ripta-dashboard.png" alt="RIPTA Dashboard">
+              </div>
+              <div class="caption">
+                <h3 class="caption-title">RIPTA Dashboard</h3>
+                <p class="subcaption">Real-time location and data of Providence buses</p>
+              </div>
+            </a>
+          </div>
+        </div>
+
         <div class="col-md-4">
           <div class="thumbnail">
             <a href="gb-github-pages.html">
