Update projects section of About.html

--- a/about.html
+++ b/about.html
@@ -47,6 +47,7 @@
             <li>jQuery</li>
             <li>React</li>
             <li>Firebase</li>
+            <li>Jest</li>
           </ul>
         <li>Git/GitHub</li>
         <li>Bash</li>
@@ -58,6 +59,7 @@
           <ul>
             <li>SCSS/SASS</li>
           </ul>
+        <li>Tulip App Builder</li>
         <li>Windows Office(Word, Excel, Powerpoint)</li>
         <li>SketchUp CAD Software</li>
         <li>French(intermediate)</li>
@@ -65,7 +67,15 @@
         <li>Construction/Carpentry/Metalworking</li>
       </ul>
       <h3>Projects</h3>
-        <p>See <a href="projects.html">Projects page</a></p>
+        <h4>In Progress</h4>
+          <h5><a href="https://github.com/Gbachant/Lane-Claim">Lane Claim</a></h5>
+            <ul>
+              <li>Lane Claim is a progress web app designed for tracking and reporting bikelane hazards, primarily cars.</li>
+              <li>Lane Claim is built with jQuery, Bootstrap, and SCSS</li>
+              <li>It uses Firebase <a href="https://firebase.google.com/products/realtime-database/">Realtime Database</a> and <a href="https://firebase.google.com/products/storage/">Storage</a> for its data and uses <a href="https://jestjs.io/">Jest</a> for its unit testing.</li>
+            </ul>
+        <h4>Complete</h4>
+          <p>See <a href="projects.html">Projects page</a></p>
       <h3>Experience</h3>
         <h4><a href="https://www.dentsplysirona.com/en-us">Dentsply Sirona</a>, Waltham, MA</h4>
           <h5>Production Technician: (October 2018—Current)</h5>
