Update Experience and Resume on about.html

--- a/about.html
+++ b/about.html
@@ -78,11 +78,24 @@
           <p>See <a href="projects.html">Projects page</a></p>
       <h3>Experience</h3>
         <h4><a href="https://www.dentsplysirona.com/en-us">Dentsply Sirona</a>, Waltham, MA</h4>
-          <h5>Production Technician: (October 2018—Current)</h5>
+          <h5>Production Technician II: (October 2018—Current)</h5>
             <ul>
-              <li>Organize customers' orders and confirm their invoices</li>
-              <li>Ship customers' orders at a fast pace</li>
+              <li>Responsible for receiving, verifying, packaging, and shipping customers' orders at fast pace</li>
+              <li>Tulip App Administrator</li>
               <li>Use 5S, Lean, and Kaizen to increase effeciency and improve work methods</li>
+            </ul>
+        <h4><a href="https://americanrepertorytheater.org/">American Reperetory Theater - Havard</a>, Cambridge, MA</h4>
+          <h5>Temporary Scene Carpenter/Stagehand: (June 2018—August 2018 )</h5>
+            <ul>
+              <li>Built scenery and props for theater productions following blueprints</li>
+              <li>Loaded and unloaded props, scenery, and tools to and from the Loeb Theater</li>
+            </ul>
+        <h4><a href="http://billbachantbuilders.com/">Bachant Builders</a>, Wareham, MA</h4>
+          <h5>Foreman/Carpenter: (April 2009—November 2013 / November 2016—January 2018)</h5>
+            <ul>
+              <li>Used SketchUp to design blueprints for mapping building dimensions</li>
+              <li>Had experience doing finish carpentry and installing cabinets</li>
+              <li>Duties included carpentry/woodworking, automotive repair, masonry, metalworking</li>
             </ul>
         <h4><a href="https://www.facebook.com/Animal-Associates-1455735024727937/">Animal Associates</a>, Dartmouth, MA</h4>
           <h5>Office Manager/Head Receptionist: (July 2015—November 2016)</h5>
@@ -98,13 +111,7 @@
               <li>Cleaned, fixed, and listed firearms for sale on various online platforms</li>
               <li>Found creative solutions to mechanical problems without clear instructions</li>
             </ul>
-        <h4><a href="http://billbachantbuilders.com/">Bachant Builders</a>, Wareham, MA</h4>
-          <h5>Foreman/Carpenter: (April 2009—November 2013 / November 2016—January 2018)</h5>
-            <ul>
-              <li>Used SketchUp to design blueprints for mapping building dimensions</li>
-              <li>Had experience doing finish carpentry and installing cabinets</li>
-              <li>Duties included carpentry/woodworking, automotive repair, masonry, metalworking</li>
-            </ul>
+
       <h3>Education</h3>
         <h4>Bristol Community College, Fall River, MA (2015—)</h4>
           <ul>
@@ -117,7 +124,7 @@
     </div>
     <hr>
     <div>
-      <a href="https://docs.google.com/document/d/e/2PACX-1vTltEnacc-nt3tiAnhLSFb7uKQHfCWG-H7PpM_5KeTcpLSQqDEjadqUwy4jRQlSxNDIGqSe6iVY8rfq/pub">View Resume on Google Docs</a>
+      <a href="https://docs.google.com/document/d/1d9vJS8ZktSJLMsFDTyhtcAKI29qBRL1bIK5-GjqzBpE/edit?usp=sharing">View Resume on Google Docs</a>
       <br>
       <a href="pictures/Garrett-Bachant-Resume.pdf" class="footer" download>Download Resume as PDF</a>
     </div>
