Fix spelling error

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
             <ul>
               <li>Responsible for receiving, verifying, packaging, and shipping customers' orders at fast pace</li>
               <li>Tulip App Administrator</li>
-              <li>Use 5S, Lean, and Kaizen to increase effeciency and improve work methods</li>
+              <li>Use 5S, Lean, and Kaizen to increase efficiency and improve work methods</li>
             </ul>
         <h4><a href="https://americanrepertorytheater.org/">American Reperetory Theater - Havard</a>, Cambridge, MA</h4>
           <h5>Temporary Scene Carpenter/Stagehand: (June 2018—August 2018 )</h5>
