--- a/projects.html
+++ b/projects.html
@@ -56,8 +56,8 @@
             </a>
           </div>
         </div> -->
-        
-        <div class="col-md-4">
+
+        <!-- <div class="col-md-4">
           <div class="thumbnail">
             <a href="rhyme-scheme.html">
               <div class="thumbnail-image-container">
@@ -69,7 +69,7 @@
               </div>
             </a>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-md-4">
           <div class="thumbnail">
