Update page info for rhyme-scheme.html

--- a/projects.html
+++ b/projects.html
@@ -57,19 +57,19 @@
           </div>
         </div> -->
 
-        <!-- <div class="col-md-4">
+        <div class="col-md-4">
           <div class="thumbnail">
             <a href="rhyme-scheme.html">
               <div class="thumbnail-image-container">
-                <img src="pictures/Favicon.png" alt="Favicon of Gbachant.github.io">
+                <img src="pictures/rhyme_ratio_violin_thumbnail.png" alt="Violin plot of rhyme ratio over time">
               </div>
               <div class="caption">
-                <h3 class="caption-title">Lyric Analysis</h3>
+                <h3 class="caption-title">Rhyme Scheme Analysis</h3>
                 <p class="subcaption">A Jupyter Notebook for analyzing stylistic habits of songwriters</p>
               </div>
             </a>
           </div>
-        </div> -->
+        </div>
 
         <div class="col-md-4">
           <div class="thumbnail">
